fixed layout issue

--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -139,7 +139,7 @@ main {
     margin-top: 5em;
     @include mq(medium){
       margin-top: 10em;
-      width: 65%;
+      width: 80%;
       float: right;
       padding-right: 10em;
   }
